# legged_ros2

./: README.md
docs/: installation.md
legged_rl_controller/: CMakeLists.txt  legged_rl_controller_plugins.xml  package.xml
legged_rl_controller/include/legged_rl_controller/: legged_articulation.hpp  legged_jump_articulation.hpp  legged_jump_controller.hpp  legged_rl_controller.hpp
legged_rl_controller/include/legged_rl_controller/isaaclab/algorithms/: algorithms.h
legged_rl_controller/include/legged_rl_controller/isaaclab/assets/articulation/: articulation.h
legged_rl_controller/include/legged_rl_controller/isaaclab/envs/: manager_based_rl_env.h
legged_rl_controller/include/legged_rl_controller/isaaclab/envs/mdp/: observations.h
legged_rl_controller/include/legged_rl_controller/isaaclab/envs/mdp/actions/: joint_actions.h
legged_rl_controller/include/legged_rl_controller/isaaclab/manager/: action_manager.h  manager_term_cfg.h  observation_manager.h
legged_rl_controller/src/: legged_jump_controller.cpp  legged_rl_controller.cpp  legged_rl_controller.yaml  xxx.bak
legged_robot_description/g1_description/: CMakeLists.txt  package.xml
legged_robot_description/g1_description/config/: amp_rl_controller.yaml  pid_controller.yaml  rl_controller.yaml  ros2_controller.yaml  separate_controller.yaml  vanilla_rl_controller.yaml
legged_robot_description/g1_description/config/mujoco_direct/: ros2_controller_rl.yaml
legged_robot_description/g1_description/config/rl/: amp_policy.onnx  policy.onnx  policy.pt
legged_robot_description/g1_description/launch/: mujoco_pid_ctrl.launch.py  mujoco_rl.launch.py  mujoco_separate_jnt_ctrl.launch.py  sdk.launch.py  sdk_rl.launch.py  sdk_separate_jnt_ctrl.launch.py  view_robot.launch.py
legged_robot_description/g1_description/launch/mujoco_direct/: mj_direct_rl.launch.py
legged_robot_description/g1_description/meshes/: .gitignore
legged_robot_description/g1_description/mjcf/: g1_29dof_lock_waist_rev_1_0.xml
legged_robot_description/g1_description/rviz2/: g1.rviz
legged_robot_description/g1_description/scripts/: pid_ref_node.py  print_ros2_control.py
legged_robot_description/g1_description/urdf/: g1_29dof_lock_waist_rev_1_0.ros2_control.xacro  g1_29dof_lock_waist_rev_1_0.urdf  g1_29dof_lock_waist_rev_1_0.urdf.xacro  g1_29dof_lock_waist_rev_1_0_macro.urdf.xacro  test.urdf
legged_robot_description/go2_description/: CMakeLists.txt  package.xml
legged_robot_description/go2_description/config/: jump_controller_gym.yaml  rand_traj_controller.yaml  rl_controller.yaml  ros2_controller.yaml  ros2_controller_gym.yaml
legged_robot_description/go2_description/config/mujoco_direct/: ros2_controller_rl.yaml
legged_robot_description/go2_description/config/rl/: policy.onnx  policy.pt  policy_jump_gym.onnx
legged_robot_description/go2_description/dae/: .gitignore
legged_robot_description/go2_description/launch/: jump_sdk.launch.py  mujoco_rl.launch.py  mujoco_separate_jnt_ctrl.launch.py  rand_traj_sdk.launch.py  sdk.launch.py  view_robot.launch.py
legged_robot_description/go2_description/launch/mujoco_direct/: mj_direct_rl.launch.py
legged_robot_description/go2_description/mjcf/: go2.xml
legged_robot_description/go2_description/mjcf/assets/: .gitignore
legged_robot_description/go2_description/rviz2/: go2.rviz
legged_robot_description/go2_description/scripts/: print_ros2_control.py
legged_robot_description/go2_description/urdf/: ros2_control.xacro  test.urdf
legged_robot_description/go2_description/xacro/: robot.xacro  ros2_control.xacro
legged_ros2_control/: CMakeLists.txt  legged_ros2_control_plugins.xml  package.xml
legged_ros2_control/include/legged_ros2_control/: legged_ros2_control.hpp  legged_system_interface.hpp  visibility_control.h
legged_ros2_control/include/legged_ros2_control/mujoco/: mujoco_cameras.hpp  mujoco_rendering.hpp  mujoco_ros2_control.hpp  mujoco_system_interface.hpp
legged_ros2_control/include/legged_ros2_control/robots/g1/: g1_system_interface.hpp
legged_ros2_control/include/legged_ros2_control/robots/unitree/dds_wrapper/common/: Publisher.h  Subscription.h  unitree_joystick.hpp
legged_ros2_control/include/legged_ros2_control/robots/unitree/robots/: unitree_node.hpp
legged_ros2_control/include/legged_ros2_control/robots/unitree/robots/g1/: define.hpp  g1_pub.hpp  g1_sub.hpp  g1_system_interface.hpp
legged_ros2_control/include/legged_ros2_control/robots/unitree/robots/go2/: define.h  go2_pub.h  go2_sub.h  go2_system_interface.hpp
legged_ros2_control/launch/: mujoco.launch.py  mujoco_direct.launch.py
legged_ros2_control/src/: legged_ros2_control.cpp  legged_system_interface.cpp  legged_teleop_keyboard.py
legged_ros2_control/src/mujoco/: mujoco_cameras.cpp  mujoco_node.cpp  mujoco_rendering.cpp  mujoco_ros2_control.cpp  mujoco_system_interface.cpp
legged_ros2_control/src/robots/g1/: CMakeLists.txt  g1_node.cpp  g1_system_interface.cpp
legged_ros2_control/src/robots/go2/: CMakeLists.txt  go2_node.cpp  go2_system_interface.cpp
legged_ros2_control/src/robots/unitree/: CMakeLists.txt
legged_ros2_control/src/robots/unitree/g1/: CMakeLists.txt  g1_node.cpp
legged_ros2_control/src/robots/unitree/go2/: CMakeLists.txt  go2_node.cpp  go2_system_interface.cpp
legged_ros2_controller/: CMakeLists.txt  legged_ros2_controller_plugins.xml  package.xml
legged_ros2_controller/include/legged_ros2_controller/: legged_ros2_controller.hpp  random_traj_controller.hpp  separate_joint_controller.hpp  static_controller.hpp
legged_ros2_controller/include/legged_ros2_controller/semantic_components/: joint_interface.hpp
legged_ros2_controller/src/: legged_ros2_controller.cpp  random_traj_controller.cpp  separate_joint_controller.cpp  static_controller.cpp  static_controller.yaml
